# Latency_Profiling_Framework

./: CMakeLists.txt  DESIGN.md  README.md
benchmarks/: CMakeLists.txt  perf_overhead.cpp
demo/: CMakeLists.txt  main.cpp
include/: clock.hpp  latency_histogram.hpp  macros.hpp  metric_registry.hpp  metric_sink.hpp  online_stats.hpp  reporter.hpp  scoped_timer.hpp
include/profiler/: clock.hpp  macros.hpp  metric_registry.hpp  metric_sink.hpp  reporter.hpp  scoped_timer.hpp
src/: clock.cpp  latency_histogram.cpp  main.cpp  metric_registry.cpp  metric_sink.cpp  online_stats.cpp  reporter.cpp  scoped_timer.cpp
tests/: CMakeLists.txt  test_latency_histogram.cpp  test_macros.cpp  test_metric_registry.cpp  test_metric_sink.cpp  test_online_stats.cpp  test_scoped_timer.cpp
